added second paragh in index added uname details in script script file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h>GIT Practice session</h>
     <p> This is Project2 Paragraph</p>
+    <p1> This is second paragh</p1>
 </body>
 
 </html>
