--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+
+    <head>this is my headrer
+        >
+    </head>
+    </ad>
+
 
 <body>
     <h>GIT Practice session</h>
