--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <head>this is my headrer
-        >
+    <head>this is my headrer </h1>
+    <p> this is my paragraphs </p>
+        
     </head>
     </ad>
 
